Fix error where task card wrapper was left behind in DOM after task card deletion.

--- a/styles/style.css
+++ b/styles/style.css
@@ -441,7 +441,7 @@ ul.projects {
 
 .task-checkbox {
   pointer-events: auto;
-  margin-right: 45px;
+  margin-right: 47px;
 }
 
 .delete-icon {
